# mrs_safmc_cate_image

./: .gitmodules  docker-compose.yml  safmc2025.dockerfile  todo
.github/workflows/: docker-ci.yml
entrypoints/: aruco_entrypoint.sh  dds_entrypoint.sh  ros_entrypoint.sh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/control_logic/share/control_logic/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/px4_msgs/local/lib/python3.10/dist-packages/px4_msgs-2.0.1-py3.10.egg-info/: PKG-INFO
ros2_ws/install/px4_msgs/share/px4_msgs/: local_setup.sh  package.sh
ros2_ws/log/: latest_build
ros2_ws/src/: build_ws.sh
ros2_ws/src/aruco/: calibrate_camera_charuco.cpp  image_converter.cpp
ros2_ws/src/aruco/camera_calibration/: calibration_cam0.yaml  calibration_cam1.yaml
ros2_ws/src/control_logic/: CMakeLists.txt
ros2_ws/src/control_logic/launch/: cameras.py
ros2_ws/src/control_logic/src/: .activate_offboard.cpp.tmp  offboard_controller.cpp  offboard_controller.h
ros2_ws/src/safmc_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/safmc_msgs/msg/: Broadcast_State.msg  TwistID.msg
